ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: ea2.com
      http:
        paths:
          - path: /orders
            backend:
              serviceName: orders-service
              servicePort: 8080
          - path: /products
            backend:
              serviceName: products-service
              servicePort: 8080
